/* Vikingopkumst */ - Wat versassisked med de söök en vervangfunkty. Müt noch wat versassisked worden.

--- a/Vikings.mw
+++ b/Vikings.mw
@@ -87,9 +87,9 @@ Dr wörd völle diskussiëerd wårumme de Vikingen sou uutbreiden deaden. Eyne v
 
 Ne andere völ heurde theory is dat et inwonnertal van Skandinavië te grout wörden was as wat et land an eten up kon brengen. Vöär den kustvolk med superiöre seiltechniken was et dus logisk dat se doarumme oaverseys güngen kyken, üm ny land te söken vöär et oaverskot an jungvolk. Buurderyn upseten en land bouwklår maaken was lastig in et dichtbeboste binnland en de grund leynden sik nit good vöär landbouw. oavervallen pleagen oaver sey was wellicht makkeliker. De toname in et inwonnertal of landbouwofname is skoonwal nooit recht beweysen.
 
-Ne doarde verkloaring is dat de Vikingen gebruuk maaken van den oognblik van swakheid in de umlignde streken. sou warren de däänske Vikingen up de heugte van de underlinge disterye binn et ryk van Koarel den grouten rund et jår [[830]]. Engeland har te lyden van interne verskelen en was verhooldingswys den makkelik duul, döärdat sovölle steaden sou kort an sey of an makkelik bevoarboare rivyren leaden. Gebrek an goodregelde teagenstand up sey van West-Europa sorgen at Vikingskepe vry konn voaren en gån wåras se wollen, en plunderen en anvallen as se de kans saggen.
+Ne doarde verklåring is dat de Vikingen gebruuk maaken van den oognblik van swakheid in de umlignde streken. sou warren de däänske Vikingen up de heugte van de underlinge disterye binn et ryk van Koarel den grouten rund et jår [[830]]. Engeland har te lyden van interne verskelen en was verhooldingswys den makkelik duul, döärdat sovölle steaden sou kort an sey of an makkelik bevoarboare rivyren leaden. Gebrek an goodregelde teagenstand up sey van West-Europa sorgen at Vikingskepe vry konn voaren en gån wåras se wollen, en plunderen en anvallen as se de kans saggen.
 
-Ne veerde verkloaring is dat nå de val van et [[Romeinse Riek|Romeinse Ryk]] in den [[5e eeuw|5den eywe]] de handel tüsken Westeuropa en de rest van Eurasië flink achteruut gån was.<ref>Macauley Richardson, Lloyd. [http://www.hoover.org/publications/policyreview/72831997.html "Books: Eurasian Exploration"] ''Policy Review''. Hoover Institution</ref> De uutbreiding van de [[Islam]] in den [[7e eeuw|7den eywe]] dreug doaran by.<ref>Crone, Patricia. [http://books.google.com/books?id=VWL-_hRsm2IC&dq=Islam+trade+Western+Europe+7th+century&printsec=frontcover&source=in&hl=en&ei=x3QeS57kBo7ysQPZmvX9CQ&sa=X&oi=book_result&ct=result&resnum=11&ved=0CDAQ6AEwCg#v=onepage&q=&f=false ''Meccan trade and the rise of Islam''] First Georgias Press. 2004.</ref> der wörd beweard at de handel oaver de [[Middellaandse Zee|Middellandske]] sey nog nooit sou slecht har ewest. döär nye handelsroutes in et Arabiske en et Frankiske te stichten profiteerden de Vikingen van den internasjonaalen handel.
+Ne veerde verklåring is dat nå de val van et [[Romeinse Riek|Romeinse Ryk]] in den [[5e eeuw|5den eywe]] de handel tüsken Westeuropa en de rest van Eurasië flink achteruut gån was.<ref>Macauley Richardson, Lloyd. [http://www.hoover.org/publications/policyreview/72831997.html "Books: Eurasian Exploration"] ''Policy Review''. Hoover Institution</ref> De uutbreiding van de [[Islam]] in de [[7e eeuw|7. eywe]] dröäg doaran by.<ref>Crone, Patricia. [http://books.google.com/books?id=VWL-_hRsm2IC&dq=Islam+trade+Western+Europe+7th+century&printsec=frontcover&source=in&hl=en&ei=x3QeS57kBo7ysQPZmvX9CQ&sa=X&oi=book_result&ct=result&resnum=11&ved=0CDAQ6AEwCg#v=onepage&q=&f=false ''Meccan trade and the rise of Islam''] First Georgias Press. 2004.</ref> der wörd beweard at de handel oaver de [[Middellaandse Zee|Middellandske]] sey nog nooit sou slecht har ewest. döär nye handelsroutes in et Arabiske en et Frankiske te stichten profiteerden de Vikingen van den internasjonaalen handel.
 
 ==== In Neaderland ====
 In [[Neerlaand|Neaderland]] is vöäral nen anval van de Vikingen up [[Dorestad]] (doomåls ne belangryke handelsplaatse) bekeand. Et is skoonwal nooit beweysen at dit echt is geböärd, want der sint nooit spoars van weader evünden. et warren vöäral däänske Vikingen dee as oaver de rivyren van neaderland güngen. se hadden neadersettings in [[Limburg (Nederlaand)|Lembörg]], en der sint spoars evünden van swoare gevechten by [[Deawnter|Deaventer]] en [[Zutfen|sutfen]]. et Karksken wat den Engelsen monnik [[Lebuïnus|Leefwin]] in [[Riessen|Ryssen]] har låten bouwen, wör döär de Vikingen verwoust.<ref>Kerkenraad Gereformeerde Gemeente Rijssen. "Elk verhaalt zijn weg en zaken - De geschiedenis van de "Kleáne Koarke" te Rijssen. 1836-2011." 2011. p.13</ref> [[Eberhard van Hamaland]] wör döär keiser [[Arnolf van Karinthië]] ansteeld üm et Ryk te verdeadigen teagen de Vikingen. Hee löät verskeidene plaatsen umbouwen töt ringbörchte, sou as bv. [[Middelburg (stad)|Middelburg]] en [[Domburg]]. In [[Oatmörske]] wör de Hunenborg upricht, mär et is nit seker of dit döär Eberhard wör dån. By [[Boarnebrook]] wör de Schulenborg up ericht. Den name löt al seen wåras he vöär bedoold was: nen borg üm in te schulen.<ref>[http://www.bertsgeschiedenissite.nl/middeleeuwen/eeuw9/ringwalburchten.htm bertsgeschiedenissite.nl - Ringburchten] bekekn op 9 okt 2011</ref>
@@ -127,7 +127,7 @@ Vroomoderne uutgawes dee as te doon hadden med datte wa'w rechtevoort Vikingkult
 
 In Skandinavië warren de 17de eywese [[Denemaarken|däänske]] gelearden [[Thomas Bartholin]] en [[Ole Worm]], en den sweydsken [[Olof Rudbeck]] de de eyrsten dee as [[Runes (skrift)|runes]] en yslandske sagen as historiske welen gebröäken. Duurnd de [[Verlichting]] en de [[Noordse Rennaissance]] wör historiske geleardheid in Skandinavië mear rasjoneel en erichtet up resultaat, sou as blik uut et woark van den däänsken geskydkündigen [[Ludvig Holberg|Lodewyk Holberg]] en den sweydsken [[Olof von Dalin]]. Ne belangryke vroo-britske bydreage an de Vikingstudys was de ''Linguarum vett. septentrionalium thesaurus'' van George Hicke uut [[1703]] töt [[1705]]. Duurnd den [[18e eeuw|18den eywe]] wörden onmündig völle lüde uut grout-Brittanje interesseerd in ysland en Skandinaviske kultuur, wat as gevolg har dat völle [[Ooldnoors|Ooldenoors]]e tekste oaversat wörden in et [[Engels]], en oolde gedichten dee as de sogeneumde "Vikingdeugden" bejubellen.
 
-t Woard "Viking" wör pas vanof et begin van den [[19e eeuw|19den eywe]] populear maakt döär [[Erik Gustaf Geijer]] in sin gedicht ''The Viking''. Geijer sin gedicht dreug by an et romantiseerde beald van de Vikingn, wat froai weinig up geskydkündige feiten baseerd was. De vernyde interesse vanuut de [[Romantiek|Romantik]] vöär et Oolde Noorden har dootyds politike uutwoarkings. De [[Geatish Society]], wåras Geijer lid van was, mölk disse myte uut. Nen anderen sweydsken skryver den as ne grote invlood har up et beald van de Vikings was [[Esaias Tegnér]] (ook lid van de Geatish Socyty) den as ne moderne versy skreef van ''[[Friðþjófs saga ins frœkna]]'', wat onmündig populear wör in de Noordse landen, et [[Verenigd Keuninkriek|Verenigd Keuninkryk]] en [[Duutslaand|Duutsland]].
+t Woard "Viking" wör pas vanof et begin van den [[19e eeuw|19den eywe]] populear maakt döär [[Erik Gustaf Geijer]] in sin gedicht ''The Viking''. Geijer sin gedicht dröäg by an et romantiseerde beald van de vikingen, wat froai weinig up geskydkündige feiten baseerd was. De vernyde interesse vanuut de [[Romantiek|Romantik]] vöär et Oolde Noorden har dootyds politike uutwoarkings. De [[Geatish Society]], wåras Geijer lid van was, mölk disse myte uut. Nen anderen sweydsken skryver den as ne grote invlood har up et beald van de Vikings was [[Esaias Tegnér]] (ook lid van de Geatish Socyty) den as ne moderne versy skreef van ''[[Friðþjófs saga ins frœkna]]'', wat onmündig populear wör in de Noordse landen, et [[Verenigd Keuninkriek|Verenigd Keuninkryk]] en [[Duutslaand|Duutsland]].
 
 De fascinasy vöär Vikingen köm an den top geduurnde de sogeneumde [[Vikingopleawing]] an et eande van den 18den en 19den eywe. In grout-Brittanje kum dit når buuten as [[Septentrionalisme]], in Duutsland as [[Richard Wagner|Wagnerians]] denken, of selfs [[Esotheriek in Duutslaand en Oostnriek|Duutse Mystik]], en in de Skandinaviske landen as [[Romanties nasjonalisme|Romantys nationalisme]] of [[Skandinavisme]]. 19de-eywese studyuutgawes oaver de Vikingtyd kreagen nen kleinn leaserskring in grout-Brittanje, archeoloogen begunn med upgreawings van et britske Vikingverleeden, en sproakleefhebbers begunn Vikingsegswysn en -wöarde te söken in (strekgebünden varianten van) et Engels. Nye wöardeböke vöär et Ooldenoors löät lüde uut de Viktorianse tyd knooin med (vöärnamelik) de [[Ieslaandse sages|yslandske sages]].<ref name="bbc">[http://www.bbc.co.uk/history/ancient/vikings/revival_01.shtml The Viking Revival Duur Professor Andrew Wawn op de] bbc</ref>
 
@@ -168,7 +168,7 @@ In populeare kultuur wörden Vikingen nog wal es - verkeyrd - ofbeadet as todder
 
 De dänen dee as in Engeland woanden wörden oaverdreeven skoon neumd döär öare [[Angelsassies|Angelsass]]<nowiki/>iske nåbers, üm öare gewoonte dat se elken soaterdag in bad güngen en de höare vake kammen. soaterdag wörd in alle Skandinaviske landen nog ''laugardagur''/''laurdag'' /''lørdag''/''lördag'' ("waskedag") eneumd. yslanders stünden der üm bekeand at se [[woarmwaterbron|woarmwaterbrunne]]n as bad gebröäken, en töt de dag van vandage is der ne grote sauna/badkultuur in Skandinavië.
 
-vöär de oustelike Vikingen geldet at [[Ibn Rustah|Ibben Rustah]] upmarket at se skoon warren en skone kleare an hadden, terwyl [[Ibn Fadlan|Ibben Fadlan]] gruuselt van de gewoonte at elken moaren alle kearls den selfden emmer water bruukt üm et gesichte te wasken en de neuse med te snuuten. Ibben Fadlan's ofkear is te verkloaren döär de teagenstelling med de [[Islam|moslimvöärskriften vöär perseunlike versörging]], wat vöärskrif at der skone watervaaten en streumend water bruukt mosn worden. Skoonwal sinne beskryving sin ofkear mut uutdrukn, gef et ouk an at de Vikingen sik elken moaren wasken.
+vöär de oustelike Vikingen geldet at [[Ibn Rustah|Ibben Rustah]] upmarket at se skoon warren en skone kleare an hadden, terwyl [[Ibn Fadlan|Ibben Fadlan]] gruuselt van de gewoonte at elken moaren alle kearls den selfden emmer water bruukt üm et gesichte te wasken en de neuse med te snuuten. Ibben Fadlan's ofkear is te verklåren döär de teagenstelling med de [[Islam|moslimvöärskriften vöär perseunlike versörging]], wat vöärskrif at der skone watervaaten en streumend water bruukt mosn worden. Skoonwal sinne beskryving sin ofkear mut uutdrukn, gef et ouk an at de Vikingen sik elken moaren wasken.
 
 === Genetiske nålåtnskop ===
 underseuk når [[genetiese verskeaidenheaid|genetiske verskeidenheid]] gef wat insicht in den oorsprung en uutbreiding van de Vikingbevolking. De [[Haplogroep I1 (Y-DNA)|Haplogruup I1]] (herkenbår an bepålde [[genetiese markering|genetiske markering]]s up et Y-chromosoom) wörd mangs ouk wal de "Vikinghaplogruup" neumd. Disse vervörming kümt et meeste vöär under Skandinaviske manleu: 35 perseant in Noorweagn, Deanemarken en sweeden, en nen pyk van 40 perseant in west Finland.<ref>[http://www.doi.org/10.1111/j.1469-1809.2007.00429.x Annals of Human Genetics. Volume 72 Issue 3 Pages 337–348, May 2008]</ref> et kümt ouk völle vöär rund de suud-Baltiske en [[Noordzee|Noordsee]]kuste, en wörd heanig an minder de mear a'j når et suuden goat.
