/* Woapens en oorlogsvoring */

--- a/Vikings.mw
+++ b/Vikings.mw
@@ -105,14 +105,14 @@ De upname van de vrogere Skandinaviske köäningryken in de grote kulturele stre
 
 De Noorse köäningen bleaven öare macht uutuufenen in deylen van et noorden van grout-Brittanje en [[Ierlaand (eilaand)|Yrland.]] oavervallen bleaven döärgån töt in den [[12e eeuw|12den eywe]]. mär de Skandinaviske hearses warren vanof dee tyd richt up andere duullen. In [[1107]] seilen [[Sigurd I van Noorweagn|Sigurd I van Noorwea]]<nowiki/>gen når et Middenousten üm te vechten vöär et nye [[Keuningriek Jeruzalem|köäningryk Jerusalem]], en de dänen en sweyden deaden fanatik med an de [[Baltiese Kruustochtn|Baltiske Kruustoch]]<nowiki/>ten in de 12de en [[13e eeuw|13de eyween]].<ref>The Northern Crusades: Second Edition by Eric Christiansen; ISBN 0-14-026653-4</ref>
 
-== Woapens en oorlogsvoring ==
+== Wåpens en oorlogsvoring ==
 Unse kennis oaver woapens en beskoarming uut de Vikingtyd is baseerd up rellatyf weinige archeologiske vündste, ofbealdingen en vöär den deel up de verhalen uut de Noordse Sages en Noordse weten dee as up wörden eskreeven in den 13den eywe.
 
 når gebruuk warren alle vrye Noordse kearls verplicht woapens te hebn, en möägen se aaltyd by sik dreagen. De woapens gavn ouk nen Viking's sosjale stoatus an: nen ryken Viking har ne kumplete uutrösting van [[helm]], [[skeeld]], [[maliënkolder]] en sweard. nen typysen ''bóndi'' (vryen man) vöchten earder med nen [[spear]] en skeeld, en völle hadden ouk meestal nen [[saks]] by sik as hulpmes. [[Pieleboge|Boa]]<nowiki/>gen wörden vake bruukt an et begin van landgevechten en up see, mär wörden vake seen as minder earvol as handwoapns. Vikingen warren bysünder in öaren tyd, umdat se [[akse]]n gebröäken as höyvdwoapen. De [[Húscarls]] (''huuskearls''), de elitelyfwacht van köäning [[Knoet|Knuut]] (en later [[Harold Godwinson|köäning Harold II]]), hadden tweehandige aksen wårmed se med gemak skeelden en metaallene helme konn döärhouwen.
 
-== nålåtnskop ==
+== Nålåtenskop ==
 === Middeleywsk denken oaver Vikingn ===
-In [[Engelaand (regio)|Engeland]] begun de Vikingtyd bruut up den [[8 juni|8. juni]] [[793]] do as Vikingen et [[klooster|klouster]] van et eiland [[Lindisfarne]] vernytigen. De verwoosting van et [[Noordumbrië|noordumbr]]<nowiki/>iske Heilige Eiland deed de keuninklike heuwe in heel Europa upskriken van de Vikinganwesigheid. "Nooit earder wör sonne gruuweldoad seen," sea den Noordumbriaansken geleyrden [[Alkwin van Jork]]. Et beald wat der in Europa oaver de Vikingen ontstünd, wör vöär den grout gedeelte döär dissen oaverval förmd. Pas vanof [[1890]] güngen gelearden öar beald oaver de Vikingen bystellen, en sagen öar vakmanskop, technologiske veardigheeden en seemanskop.<ref>Northern Shores by Alan Palmer; p.21; ISBN 0-7195-6299-6</ref>
+In [[Engelaand (regio)|Engeland]] begun de Vikingtyd bruut up den [[8 juni|8. juni]] [[793]] do as vikingen et [[klooster|klouster]] van et eiland [[Lindisfarne]] vernetigen. De verwöösting van et [[Noordumbrië|noordumbriske]] Heilige Eiland deed de köäninklike höve in heel Europa upskrikken van de vikingen. "Nooit earder wör sonne gruuweldoad seen," sea den Noordumbriaansken geleyrden [[Alkwin van Jork]]. Et beald wat der in Europa oaver de Vikingen ontstünd, wör vöär den grout gedeelte döär dissen oaverval förmd. Pas vanof [[1890]] güngen gelearden öar beald oaver de Vikingen bystellen, en sagen öar vakmanskop, technologiske veardigheeden en seemanskop.<ref>Northern Shores by Alan Palmer; p.21; ISBN 0-7195-6299-6</ref>
 
 [[Noordse mythologie|Noordse mytology]], [[Noordse sage|sages]] en [[Ooldnoorse literatuur|Ooldenoorse literatuur]] beskryvt de Skandinaviske kultuur en et geleuf döär verhalen van mythologiske heelden. De vrogste oaverdracht van disse verhalen was skoonwal mundelik, en latere tekste wörden oavernömmen van Kristelike gelearden, sou as de yslanders [[Snorri Sturluson]] en [[Sæmundur fróði]], wårdöär de woarheid der van twyfelachtig is. De meeste van disse sagen wörden in ysland upskreeven, en dår bleaven de meesten ook, umdat de yslanders voordan interesseerd bleaven in Noordse literatuur en wetn.
 
