--- a/Vikings.mw
+++ b/Vikings.mw
@@ -75,21 +75,21 @@ Nåspöälers van de vikingtyd doot vake noordske techniken topassen vöär yser
 
 == De Vikingtyd ==
 [[Bestaand:Gokstadskipet1.jpg|thumb|right|180px|t [[Gokstadskip]] in [[Oslo]], [[Noorweagn]].]]
-De tyd tüsken de eyrstbeskreavene oavervallen in de jåren 790 töt de [[Normandiese Vereuwering|Normandiske Veröyvering]] van [[Engelaand (regio)|Engeland]] in [[1066]] wördt meysttyds de Vikingtyd nöömd. Vikingen gebröäken de [[Noorse Zee|Noordske]] <ref>C.Michael Hogan. 2011. [http://www.eoearth.org/article/Norwegian_Sea?topic=49523 ''Norwegian Sea''. Eds.Peter Saundry & C.J.Cleveland. Encyclopedia of Earth. National Council for science and the Environment.] Washington DC </ref> en [[Baltiese Zee|Baltiske sey]]  üm up et süden an te våren. Normandiers stamden af van de däänske en noorske vikingen dee as in de [[10e eeuw|10. eyve]] [[feodaliteat|feodaal]] heyrskrecht hadden ekreagen in et noorden van [[Fraankriek|Frankryk]]; et gråfskop [[Normandië|Normandie]]. Sou bleef de nåwas van de Vikingen belangryk in Noordeuropa. Ouk köäning [[Harold Godwinson]], den lätsten [[Angelsassen|angelsassisken]] köäning van Engeland, had däänske vöärolden.
+De tyd tüsken de eyrstbeskreavene oavervallen in de jåren 790 töt de [[Normandiese Vereuwering|Normandiske Veröyvering]] van [[Engelaand (regio)|Engeland]] in [[1066]] wördt meysttyds de Vikingtyd nöömd. Vikingen voorden oaver de [[Noorse Zee|Noordske]] <ref>C.Michael Hogan. 2011. [http://www.eoearth.org/article/Norwegian_Sea?topic=49523 ''Norwegian Sea''. Eds.Peter Saundry & C.J.Cleveland. Encyclopedia of Earth. National Council for science and the Environment.] Washington DC </ref> en [[Baltiese Zee|Baltiske sey]]  up et süden an. Normandiers stamden af van de däänske en noorske vikingen dee as in de [[10e eeuw|10. eyve]] [[feodaliteat|feodaal]] heyrskrecht hadden ekreagen in et noorden van [[Fraankriek|Frankryk]]; et gråfskop [[Normandië|Normandie]]. Sou bleef de nåwas van de Vikingen belangryk in Noordeuropa. Ouk köäning [[Harold Godwinson]], den lätsten [[Angelsassen|angelsassisken]] köäning van Engeland, had däänske vöärolden.
 
-Vanuut de landkaarte bekeaken göld de Vikingtyd neet alleyne vöär de skandinaviske landen, mär ouk vöär de gebeden dee as under [[Germoanen|noordgermaans]] bewind völlen. denkt doarby an de [[Danelaw]] in et hudige [[Engelaand (regio)|Engeland]], med [[York]] as administratyf middelpeunt van et Keuninkryk [[Noordumbrië]],<ref>[http://www.englandsnortheast.co.uk/VikingNorthumbria.html "History of Northumbria: Viking era 866 AD - 1066 AD"] www.englandnortheast.co.uk.</ref> deylen van [[Mersië]],<ref>[http://www.allempires.com/article/index.php?q=identity_self_image_viking_age_england "Identity and Self-Image in Viking Age England"] www.allempires.co.uk. October 3, 2007</ref> en [[Keuninkriek East Anglia|oust Anglië]].<ref>Toyne, Stanley Mease. [http://books.google.com/books?id=yvGt8gfBlEIC&pg=PA27&lpg=PA27&dq=Viking+Age+East+Anglia&source=bl&ots=chkBibhiGs&sig=NX79_9WHb2BL7ctaNdj1L1D93f8&hl=en&ei=f28eS-aUHovkswPr4v36CQ&sa=X&oi=book_result&ct=result&resnum=8&ved=0CCkQ6AEwBw#v=onepage&q=Viking%20Age%20East%20Anglia&f=false ''The Scandinavians in history''] Pg.27. 1970.</ref> Vikingnavigators vünden weagen når nye landen in et noorden, ousten en westen. Hyruut ontstünden onofhankelike neadersettings in [[Shetlaand|Shetland]], [[Orkney]] en de [[Faeröer|Faeröareilanden]], [[Ieslaand|ysland]], [[Greunlaand|Greunland]]<ref>[http://www.archaeology.org/online/features/greenland/ The Fate of Greenland's Vikings], duur Dale Mackenzie Brown, ''Archaeological Institute of America'', February 28, 2000</ref> en [[L'Anse aux Meadows]], en ne kortstundige neadersetting in [[Newfoundland]], rund et jår [[1000]].<ref>[http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=16331154&query_hl=3&itool=pubmed_docsum The Norse discovery of America]</ref> Völle van disse landen, vöäral Greunland en ysland, künnet oorsprungelik ontdekt wean döär seelüde dee as uut kuurs ewaid warren. Van de andere kante künnet se ouk med upset upsocht wean, wellicht up grund van verhalen van seelüde dee as land in de vearten seen hadden. De neadersetting in Greunland störf nåderhand uut, möägelikerwys döär [[klimaatveraandering|klimaatverandering]]. Vikingen deaden ouk gebeden verkenn en oaverneamen in [[Slaviese volker|slaw]]<nowiki/>iske gebeden in [[Oost-Europa|oust-Europa]], vöäral de [[Kievan Rus|Kyvan Rus]]. teagen 950 n. Kr. warren disse neadersettings groutendeels döär de Slawysen oavernömmen.
+De Vikingtyd göld neet alleyne vöär de skandinaviske landen, mär ouk vöär de gebeden dee as med herhaaldelike anvallen en kolonisaty te maken kreagen. Denkt doarby an de [[Danelaw]] in et hüdige [[Engelaand (regio)|Engeland]], med [[York|Jork]] as administrativ middelpunt van et Köäningryk [[Noordumbrië|Noordumbrie]],<ref>[http://www.englandsnortheast.co.uk/VikingNorthumbria.html "History of Northumbria: Viking era 866 AD - 1066 AD"] www.englandnortheast.co.uk.</ref> deylen van [[Mersië|Mersie]],<ref>[http://www.allempires.com/article/index.php?q=identity_self_image_viking_age_england "Identity and Self-Image in Viking Age England"] www.allempires.co.uk. October 3, 2007</ref> en [[Keuninkriek East Anglia|Oustanglie]].<ref>Toyne, Stanley Mease. [http://books.google.com/books?id=yvGt8gfBlEIC&pg=PA27&lpg=PA27&dq=Viking+Age+East+Anglia&source=bl&ots=chkBibhiGs&sig=NX79_9WHb2BL7ctaNdj1L1D93f8&hl=en&ei=f28eS-aUHovkswPr4v36CQ&sa=X&oi=book_result&ct=result&resnum=8&ved=0CCkQ6AEwBw#v=onepage&q=Viking%20Age%20East%20Anglia&f=false ''The Scandinavians in history''] Pg.27. 1970.</ref> Vikingen vünden weagen når nye landen in et noorden, ousten en westen. Hyruut ontstünden onofhankelike neadersettingen in [[Shetlaand|Shetland]], [[Orkney]] en de [[Faeröer|Faeröareilanden]], [[Ieslaand|Ysland]], [[Greunlaand|Gröönland,]]<ref>[http://www.archaeology.org/online/features/greenland/ The Fate of Greenland's Vikings], duur Dale Mackenzie Brown, ''Archaeological Institute of America'', February 28, 2000</ref> et kanadeeske [[L'Anse aux Meadows]], en ne kortstundige neadersetting in [[Newfoundland]] rund et jår [[1000]].<ref>[http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=16331154&query_hl=3&itool=pubmed_docsum The Norse discovery of America]</ref> Vöäral Gröönland en Ysland künnet oorsprungelik untdekked weasen döär seelüde dee as uut kuurs ewaid warren. Ouk künnet se med upset upsöcht weasen, wellicht nå verhalen van seylüde dee as land in de verte seen hadden. De neadersetting in Greunland störv nåderhande uut, möägelikerwys döär [[klimaatveraandering|klimaatverandering]]. Vikingen deaden ouk slaviske gebeden verkennen en oaverneamen in [[Oost-Europa|Ousteuropa]], vöäral de [[Kievan Rus|Kyvan Rus]]. Teagen 950 nå Kristus warren disse neadersettings groutendeels döär de slavisken oavernöämen.
 
 === Vikingopkumst ===
 [[Bestaand:Viking Expansion.svg|thumb|right|330px|Kaarte med Skandinaviske neadersettings in den [[8e eeuw|8sten]] (dungerrood), [[9e eeuw|9den]] (rood), [[10e eeuw|10den]] (oranje), en [[11e eeuw|11den eywe]] (gel). De greune gebeden wörden regelmåtig plunderd döär de Vikings]] 
-De Vikingen seilden oaver et grötste deel van de Noord-Atlantiske Osean, töt an [[Noord-Afrika|Noordafrika]] en oust töt [[Ruslaand|Rusland]], [[Konstantinopel]] en et [[Midden-Oosten|Middenousten]], as plundervolk, handelsleu, kolonisten en huursoldoaten. Under [[Leif Eriksson]], sönne van [[Erik n Rooin|Erik den Rouden]], kümmen de Vikingen in [[Noord-Amerika|Noordamerika]], en stichteden dår ne kolony up de stea wåras rechtevoort [[L'Anse aux Meadows]] is, in [[Newfoundland]], [[Kanada]]. Disse kolony heuld et nit lange vol.
+De Vikingen seilden oaver et grötste deel van den [[Atlantische Ozeoan|Noordatlantisken Oceaan]], töt an [[Noord-Afrika|Noordafrika]] en oust töt [[Ruslaand|Rusland]], [[Konstantinopel]] en et [[Midden-Oosten|Middenousten]]. Dår deaden se plünderen, handelen, kolonys stichten en warken as hüürsuldåten. Under [[Leif Eriksson]], söäne van [[Erik n Rooin|Erik den Rouden]], kümmen de Vikingen in [[Noord-Amerika|Noordamerika]], en stichteden dår ne kolony up de stea wåras rechtevoort [[L'Anse aux Meadows]] is, in [[Newfoundland]], [[Kanada]]. Disse kolony höäld neet lange stand.
 
-Dr wörd völle diskussiëerd wårumme de Vikingen sou uutbreiden deaden. Eyne van de meystgebruukte annames is dat [[Koarel n Grootn|Koarel den]] grouten "kracht en terreur gebreuk üm alle headens te [[Kristendom|kerstenen]]", wat leiden töt "deupn, bekearing of dood döär yser en blood", en doarumme "wulden de Vikingen en andere headens wraak neamen".<ref>Rudolf Simek, "the emergence of the viking age: circumstances and conditions", "The vikings first Europeans VIII - XI century - the new discoveries of archaeology", other, 2005, p. 24-25</ref><ref>Bruno Dumézil, master of Conference at Paris X-Nanterre, Normalien, aggregated history, author of conversion and freedom in the barbarian kingdoms. 5Th - 8th centuries (Fayard, 2005)</ref><ref>"Franques Royal Annals" cited in Peter Sawyer, "The Oxford Illustrated History of the Vikings", 2001, p. 20</ref><ref>Dictionnaire d'histoire de France - Perrin - Alain Decaux and André Castelot - 1981 - pages 184/185 ISBN 2-7242-3080-9</ref><ref>"the Vikings" R.Boyer history, myths, dictionary, Robert Laffont several 2008, p96 ISBN 978-2-221-10631-0</ref> Professor Rudolf Simek bevestigt dat "et gin toval is at de Vikingen gangs güngen geduurnde de hearskoppye van Koarel den grouten".<ref>. Rudolf Simek, "the emergence of the viking age: circumstances and conditions", "The vikings first Europeans VIII - XI century - the new discoveries of archaeology", other, 2005, p. 24-25</ref><ref>[[François-Xavier Dillmann]], "Viking civilisation and culture. A bibliography of French-language ", Caen, Centre for research on the countries of the North and Northwest, University of Caen, 1975, p.19, and" Les Vikings - the Scandinavian and European 800-1200 ", 22nd exhibition of art from the Council of Europe, 1992, p. 26</ref> döärdat et Kristendom döärdrung in Skandinavië wör Noorweagen sowat den eywe lang verdeyld.<ref>"History of the Kings of Norway" by Snorri Sturlusson translated by Professor of History François-Xavier Dillmann, Gallimard ISBN 2-07-073211-8 pages 15,16,18,24,33,34,38</ref>
+Der wörd völle diskussieerd wårumme de Vikingen sou uutbreiden deaden. Eyne van de meystgebruukte annames is dat [[Koarel n Grootn|Koarel den Grouten]] "kracht en terröör gebröäk üm alle heidenen te [[Kristendom|kerstenen]]", wat leiden töt "döypen, bekeyring of doud döär yser en blood", en dårümme "wulden de Vikingen en andere heidenen wraak neamen".<ref>Rudolf Simek, "the emergence of the viking age: circumstances and conditions", "The vikings first Europeans VIII - XI century - the new discoveries of archaeology", other, 2005, p. 24-25</ref><ref>Bruno Dumézil, master of Conference at Paris X-Nanterre, Normalien, aggregated history, author of conversion and freedom in the barbarian kingdoms. 5Th - 8th centuries (Fayard, 2005)</ref><ref>"Franques Royal Annals" cited in Peter Sawyer, "The Oxford Illustrated History of the Vikings", 2001, p. 20</ref><ref>Dictionnaire d'histoire de France - Perrin - Alain Decaux and André Castelot - 1981 - pages 184/185 ISBN 2-7242-3080-9</ref><ref>"the Vikings" R.Boyer history, myths, dictionary, Robert Laffont several 2008, p96 ISBN 978-2-221-10631-0</ref> Professor Rudolf Simek bevästigt dat "et gin toval is dat de Vikingen gangs güngen under de heyrskappye van Koarel den Grouten".<ref>. Rudolf Simek, "the emergence of the viking age: circumstances and conditions", "The vikings first Europeans VIII - XI century - the new discoveries of archaeology", other, 2005, p. 24-25</ref><ref>[[François-Xavier Dillmann]], "Viking civilisation and culture. A bibliography of French-language ", Caen, Centre for research on the countries of the North and Northwest, University of Caen, 1975, p.19, and" Les Vikings - the Scandinavian and European 800-1200 ", 22nd exhibition of art from the Council of Europe, 1992, p. 26</ref> Et kristendom sorgden in Noorweagen sowat ne eywe lang vöär verdeyldheid.<ref>"History of the Kings of Norway" by Snorri Sturlusson translated by Professor of History François-Xavier Dillmann, Gallimard ISBN 2-07-073211-8 pages 15,16,18,24,33,34,38</ref>
 
-Ne andere völ heurde theory is dat et inwonnertal van Skandinavië te grout wörden was as wat et land an eten up kon brengen. Vöär den kustvolk med superiöre seiltechniken was et dus logisk dat se doarumme oaverseys güngen kyken, üm ny land te söken vöär et oaverskot an jungvolk. Buurderyn upseten en land bouwklår maaken was lastig in et dichtbeboste binnland en de grund leynden sik nit good vöär landbouw. oavervallen pleagen oaver sey was wellicht makkeliker. De toname in et inwonnertal of landbouwofname is skoonwal nooit recht beweysen.
+Ne andere vöäle höyrde teory is dat et inwoanertal van skandinavie te grout wörden was vöär wat et land an eten up kunde brengen. Vöär en kustvolk med superiöre seiltechniken was et ja logisk dat se dårümme oaverseys güngen kyken, üm ny land te söken vöär et oaverskot an jungvolk. Buurderyen upsetten en land bouwklår maken was lastig in et dichtbeboste binnenland en de grund leynden sik neet best vöär landbouw. Oavervallen pleagen oaver sey was wellicht makkeliker. En groiend inwonnertal of krimpende landbouw is skoonwal nooit recht beweysen.
 
-Ne doarde verklåring is dat de Vikingen gebruuk maaken van den oognblik van swakheid in de umlignde streken. sou warren de däänske Vikingen up de heugte van de underlinge disterye binn et ryk van Koarel den grouten rund et jår [[830]]. Engeland har te lyden van interne verskelen en was verhooldingswys den makkelik duul, döärdat sovölle steaden sou kort an sey of an makkelik bevoarboare rivyren leaden. Gebrek an goodregelde teagenstand up sey van West-Europa sorgen at Vikingskepe vry konn voaren en gån wåras se wollen, en plunderen en anvallen as se de kans saggen.
+Ne darde verklåring is dat de Vikingen gebruuk makeden van en swak ougenblik in de umliggende streaken. Sou warren de däänske vikingen up de höygde van de underlinge disterye binnen et ryk van Koarel den Grouten rund et jår [[830]]. Engeland har te lyden van interne verskellen en was verholdingswys en makkelik doolwit, döärdat souvölle steaden sou kort an sey of an makkelik bevårbåre rivyren leaden. Gebrek an goodregelde teagenstand up sey van Westeuropa sorgden at Vikingskeype vry kunden vråren en gån wåras se wulden, en plünderen en anvallen as see de kans saggen.
 
-Ne veerde verklåring is dat nå de val van et [[Romeinse Riek|Romeinse Ryk]] in den [[5e eeuw|5den eywe]] de handel tüsken Westeuropa en de rest van Eurasië flink achteruut gån was.<ref>Macauley Richardson, Lloyd. [http://www.hoover.org/publications/policyreview/72831997.html "Books: Eurasian Exploration"] ''Policy Review''. Hoover Institution</ref> De uutbreiding van de [[Islam]] in de [[7e eeuw|7. eywe]] dröäg doaran by.<ref>Crone, Patricia. [http://books.google.com/books?id=VWL-_hRsm2IC&dq=Islam+trade+Western+Europe+7th+century&printsec=frontcover&source=in&hl=en&ei=x3QeS57kBo7ysQPZmvX9CQ&sa=X&oi=book_result&ct=result&resnum=11&ved=0CDAQ6AEwCg#v=onepage&q=&f=false ''Meccan trade and the rise of Islam''] First Georgias Press. 2004.</ref> der wörd beweard at de handel oaver de [[Middellaandse Zee|Middellandske]] sey nog nooit sou slecht har ewest. döär nye handelsroutes in et Arabiske en et Frankiske te stichten profiteerden de Vikingen van den internasjonaalen handel.
+Ne veerde verklåring is dat nå de val van et [[Romeinse Riek|Romeinske Ryk]] in de [[5e eeuw|5. eywe]] de handel tüsken Westeuropa en de rest van Eurasië flink achteruut gån was.<ref>Macauley Richardson, Lloyd. [http://www.hoover.org/publications/policyreview/72831997.html "Books: Eurasian Exploration"] ''Policy Review''. Hoover Institution</ref> De uutbreiding van de [[Islam]] in de [[7e eeuw|7. eywe]] dröäg dåran by.<ref>Crone, Patricia. [http://books.google.com/books?id=VWL-_hRsm2IC&dq=Islam+trade+Western+Europe+7th+century&printsec=frontcover&source=in&hl=en&ei=x3QeS57kBo7ysQPZmvX9CQ&sa=X&oi=book_result&ct=result&resnum=11&ved=0CDAQ6AEwCg#v=onepage&q=&f=false ''Meccan trade and the rise of Islam''] First Georgias Press. 2004.</ref> Der wörd bewäärd at de handel oaver de [[Middellaandse Zee|Middellandske Sey]] nog nooit sou slecht had eweasd. Döär nye handelsroutes in et arabiske en et frankiske te stichten profiteerden de vikingen van den internationalen handel.
 
 ==== In Neaderland ====
 In [[Neerlaand|Neaderland]] is vöäral nen anval van de Vikingen up [[Dorestad]] (doomåls ne belangryke handelsplaatse) bekeand. Et is skoonwal nooit beweysen at dit echt is geböärd, want der sint nooit spoars van weader evünden. et warren vöäral däänske Vikingen dee as oaver de rivyren van neaderland güngen. se hadden neadersettings in [[Limburg (Nederlaand)|Lembörg]], en der sint spoars evünden van swoare gevechten by [[Deawnter|Deaventer]] en [[Zutfen|sutfen]]. et Karksken wat den Engelsen monnik [[Lebuïnus|Leefwin]] in [[Riessen|Ryssen]] har låten bouwen, wör döär de Vikingen verwoust.<ref>Kerkenraad Gereformeerde Gemeente Rijssen. "Elk verhaalt zijn weg en zaken - De geschiedenis van de "Kleáne Koarke" te Rijssen. 1836-2011." 2011. p.13</ref> [[Eberhard van Hamaland]] wör döär keiser [[Arnolf van Karinthië]] ansteeld üm et Ryk te verdeadigen teagen de Vikingen. Hee löät verskeidene plaatsen umbouwen töt ringbörchte, sou as bv. [[Middelburg (stad)|Middelburg]] en [[Domburg]]. In [[Oatmörske]] wör de Hunenborg upricht, mär et is nit seker of dit döär Eberhard wör dån. By [[Boarnebrook]] wör de Schulenborg up ericht. Den name löt al seen wåras he vöär bedoold was: nen borg üm in te schulen.<ref>[http://www.bertsgeschiedenissite.nl/middeleeuwen/eeuw9/ringwalburchten.htm bertsgeschiedenissite.nl - Ringburchten] bekekn op 9 okt 2011</ref>
